# seher

./: .full_diff.txt  .handoff.md  .plan.md  .review_diff.patch  Cargo.toml  README.md  renovate.json5
.claude/: settings.json
.github/workflows/: ci.yml  cruise.yml  release.yml  sakoku.yml
crates/claude-agent-sdk/: Cargo.toml
crates/claude-agent-sdk/examples/: quickstart.rs  with_tools.rs
crates/claude-agent-sdk/src/: client.rs  control.rs  errors.rs  lib.rs  query.rs  tool.rs  types.rs
crates/claude-agent-sdk/src/internal/: client.rs  mod.rs
crates/claude-agent-sdk/src/transport/: mod.rs  subprocess_cli.rs
crates/seher-cli/: Cargo.toml
crates/seher-cli/src/: args.rs  logger.rs  main.rs  mode_build.rs  mode_plan.rs  prompt.rs  run_mode.rs  stream.rs
crates/seher-sdk/: Cargo.toml
crates/seher-sdk/examples/: claude_agent_via_seher.rs  pi_mvp.rs  test_opencode_go.rs
crates/seher-sdk/src/: lib.rs
crates/seher-sdk/src/agent/: mod.rs
crates/seher-sdk/src/claude/: error.rs
crates/seher-sdk/src/claude_agent/: mod.rs
crates/seher-sdk/src/claude_headless/: mod.rs  runner.rs
crates/seher-sdk/src/claude_terminal/: command.rs  detect.rs  mod.rs  normalizer.rs  sdk.rs  tmux_backend.rs  transcript.rs  types.rs
crates/seher-sdk/src/codexbar/: client.rs  errors.rs  limit.rs  mod.rs  types.rs
crates/seher-sdk/src/config/: mod.rs
crates/seher-sdk/src/copilot/: client.rs
crates/seher-sdk/src/glm/: client.rs  mod.rs
crates/seher-sdk/src/opencode_go/: local.rs  mod.rs  remote.rs  types.rs
crates/seher-sdk/src/openrouter/: client.rs  mod.rs
crates/seher-sdk/src/sdk/: cancel.rs  config.rs  config_loader.rs  cookies.rs  dispatch.rs  errors.rs  mod.rs  pi_runner.rs  resolve.rs  sleep.rs  tool.rs  tools.rs  util.rs
examples/: settings.json  test_codex.rs
schemas/: settings.schema.json
src/: cli.rs  lib.rs
src/agent/: mod.rs
src/claude/: client.rs  types.rs
src/codex/: client.rs  mod.rs  types.rs
src/config/: mod.rs
src/crypto/: linux.rs
src/glm/: types.rs
src/opencode_go/: auth.rs  local.rs
src/web/: mod.rs
