[workspace]
members = ["crates/claude-agent-sdk", "crates/seher-cli", "crates/seher-sdk"]
resolver = "2"

[workspace.package]
authors = ["takumi3488"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/smartcrabai/seher"
version = "0.0.43"

[workspace.dependencies]
aes = "0.9"
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
cbc = { version = "0.2", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
claude-agent-sdk = { path = "crates/claude-agent-sdk", version = "0.0.43", package = "seher-claude-agent-sdk" }
dirs = "6.0"
hmac = "0.13"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }
rusqlite = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.11"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "net"] }
zzsleep = "0.0.7"

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
