[package]
name = "seher-cli"
description = "Seher CLI: pick the highest-priority coding agent and run a plan/build prompt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.dist]
formula = "seher"

[[bin]]
name = "seher"
path = "src/main.rs"
required-features = ["browser"]

[features]
default = ["browser"]
browser = ["seher-sdk/browser"]

[dependencies]
seher-sdk = { path = "../seher-sdk", version = "0.0.32", default-features = false }
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
zzsleep.workspace = true

[lints]
workspace = true
