[package]
authors.workspace = true
description = "Seher CLI: pick the highest-priority coding agent and run a plan/build prompt"
edition.workspace = true
license.workspace = true
name = "seher-cli"
repository.workspace = true
version.workspace = true

[package.metadata.dist]
formula = "seher"

[[bin]]
name = "seher"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
indexmap.workspace = true
seher-sdk = { path = "../seher-sdk", version = "0.0.53" }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
zzsleep.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
