[package]
name = "seher-sdk"
description = "Seher SDK: agent resolution and codexbar-backed rate-limit checks"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "seher"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
dirs.workspace = true
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
zzsleep.workspace = true
futures = "0.3"
pi_agent_rust = "0.1.13"
uuid = { version = "1", features = ["v4"] }
unicode-normalization = "0.1"
unicode-width = "0.2"

[[example]]
name = "pi_mvp"

[lints]
workspace = true
