[package]
authors.workspace = true
description = "Seher SDK: agent resolution and codexbar-backed rate-limit checks"
edition.workspace = true
license.workspace = true
name = "seher-sdk"
repository.workspace = true
version.workspace = true

[lib]
name = "seher"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
claude-agent-sdk.workspace = true
dirs.workspace = true
futures = "0.3"
indexmap.workspace = true
pi_agent_rust = { version = "0.1.18", default-features = false, features = [
  "sqlite-sessions",
] }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
unicode-normalization = "0.1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
zzsleep.workspace = true

[[example]]
name = "pi_mvp"

[[example]]
name = "claude_agent_via_seher"

[lints]
workspace = true
